# AutoCrate

./: .gitignore  Cargo.toml  Install.bat  README.md  README.new.md  README.old
src/: config_manager.rs  error_handler.rs  file.rs  first_run.rs  main.rs
