[package]
name = "AUTOCRATE"
version = "0.7.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
directories = "6.0.0"
colored = "3.0.0"
regex = "1.11.2"
rfd = "0.15.4"



#v0.1.0 Added is there config to Check if Config exists.
#v0.2.0 Added a Proper and Scalable Error Handling as well as ability to write to logfile.
#v0.3.0 Added Root Directory Creation with error Handling.
#v0.4.0 Added the first Setup Process
#v0.4.5 Fixed config being saved to working directories
#v0.4.6 Need to revamp entire config saving, using directories
#v0.4.7 Fixed the log for easy reading
#v0.4.8 Fixed Borrowing issurs
#v0.5.0 Added Scalable Setup with colours
#v0.5.1 Added Filter for Username
#v0.5.3 Added File Explorer opening options using rfd
#v0.5.6 Fixed Major Problems
#v0.6.0 Added Full file reading and writing capablities
#v0.7.0 Added ability to count numbers
#v0.7.1 Fixed 0 Folders issue
#v0.8.0 Added Ability to call Cargo and Create new folder